@@ -181,6 +181,7 @@ case "$host" in
     LIBTOOL_EXPORT_OPTIONS=$EXPORT_SYM_REGEX
     LIBTOOL_PROV_EXPORT_OPTIONS=$EXPORT_PROV_SYM_REGEX
     AC_DEFINE(HAVE_CARBON)
+    LIBGDA_LIBS="$LIBGDA_LIBS -framework Carbon"
     dnl SO_SUFFIX=dylib
   ;;
 *)
