@@ -72,7 +72,7 @@ with A as connection argument and with a "c1" namespace, then in the correspondi
 
 </para>
 
-@cnc: 
+@hub: 
 @ns: 
 @Returns: 
 
