@@ -1,3 +1,9 @@
+2009-02-01  Vivien Malerba <malerba@gnome-db.org>
+
+	* configure.in:
+	* libgda/binreloc/gda-binreloc.c: fix for MacOS X
+	* tools/gda-sql.c: ignore unknown arguments on the command line
+
 2009-01-28  Vivien Malerba <malerba@gnome-db.org>
 
 	* libgda/sqlite/virtual/gda-vconnection-hub.h:
